# Data-QC-program

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  README.md  clinical_data_qc.py  generate_sample_data.py  pyproject.toml  ruff.toml
docs/: DESIGN.md  PLANS.md  PRODUCT_SENSE.md  QUALITY_SCORE.md  RELIABILITY.md  SECURITY.md
docs/design-docs/: core-beliefs.md  data-model.md  index.md
docs/exec-plans/: tech-debt-tracker.md
docs/product-specs/: collection-log-update.md  correction-matching.md  error-notification.md  extract-hosp-date.md  index.md  master-db-build.md  rid-matching.md
docs/references/: column-constants.md
sample_data/: Master_DB.xlsx  Master_DB_샘플.xlsx  hubis_샘플.xlsx  rid_파일_샘플.xlsx  데이터추출시스템_수정파일_샘플.xlsx  매칭결과.xlsx  매칭결과_샘플.xlsx  병록번호_접수일자_추출.xlsx  보정매칭결과.xlsx  수집관리시스템_샘플.xlsx  수집일지_샘플.xlsx  수집일지_샘플1.xlsx  수집일지_샘플2.xlsx  슈프림_수정파일_샘플.xlsx
tests/: test_core.py
