[project]
name = "clinical-data-qc"
version = "1.0.0"
description = "임상연구 수집 데이터 품질관리 자동화 시스템"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "openpyxl>=3.1",
    "python-calamine>=0.6",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
